tests/NormalTests/paczka1/fuzzy1/85279607.err
Error in line 10: EiE A167 62,8
Error in line 8: V2fLwQ A956 79,8
Error in line 20: V2fLwQ A167 22,2
Error in line 9: GeT A956 48,4
Error in line 28: GeT S980 73,9
Error in line 35: GeT A221 98,5
